// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popper renders correctly with type="black" 1`] = `
<DocumentFragment>
  <button
    aria-controls="popover-test-black"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    black
  </button>
  .cache-1uoj074 {
  border-radius: 4px;
  background-color: #000;
  color: #fff;
  fill: #000;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="black"
      aria-modal="true"
      class="cache-1uoj074 e1u0xa8a0"
      data-dialog="true"
      hidden=""
      id="popover-test-black"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        style="font-size: 30px; width: 1em; height: 1em; pointer-events: none;"
      >
        <svg
          viewBox="0 0 30 30"
        >
          <path
            class="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            class="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      <div>
        black
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popper renders correctly with type="white" 1`] = `
<DocumentFragment>
  <button
    aria-controls="popover-test-white"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    white
  </button>
  .cache-1dlx7rm {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="white"
      aria-modal="true"
      class="cache-1dlx7rm e1u0xa8a0"
      data-dialog="true"
      hidden=""
      id="popover-test-white"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        style="font-size: 30px; width: 1em; height: 1em; pointer-events: none;"
      >
        <svg
          viewBox="0 0 30 30"
        >
          <path
            class="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            class="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      <div>
        white
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popper renders with disclosure 1`] = `
<DocumentFragment>
  <button
    aria-controls="popover-test-2"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Test
  </button>
  .cache-1dlx7rm {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    aria-label="Custom popover with button"
    class="cache-1dlx7rm e1u0xa8a0"
    data-dialog="true"
    hidden=""
    id="popover-test-2"
    role="dialog"
    style="display: none; position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      style="font-size: 30px; width: 1em; height: 1em; pointer-events: none;"
    >
      <svg
        viewBox="0 0 30 30"
      >
        <path
          class="stroke"
          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
        />
        <path
          class="fill"
          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
        />
      </svg>
    </div>
    <div>
       auto
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popper renders with modal=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="popover-test-1"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    modal=false
  </button>
  .cache-1dlx7rm {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    aria-label="test"
    class="cache-1dlx7rm e1u0xa8a0"
    data-dialog="true"
    hidden=""
    id="popover-test-1"
    role="dialog"
    style="display: none; position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      style="font-size: 30px; width: 1em; height: 1em; pointer-events: none;"
    >
      <svg
        viewBox="0 0 30 30"
      >
        <path
          class="stroke"
          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
        />
        <path
          class="fill"
          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
        />
      </svg>
    </div>
    <div>
      test
    </div>
  </div>
</DocumentFragment>
`;
